change alignment of social media items

--- a/src/GruseltourBerlin2018/css/gruseltourberlin2018.css
+++ b/src/GruseltourBerlin2018/css/gruseltourberlin2018.css
@@ -42,7 +42,10 @@
 
 .footer__socialmedia {
     display: flex;
-    justify-content: space-between;
+}
+
+.footer__socialmedia li {
+    margin-right: 2em;
 }
 
 .uppercase {
