--- a/src/GruseltourBerlin2018/css/gruseltourberlin-invoice.css
+++ b/src/GruseltourBerlin2018/css/gruseltourberlin-invoice.css
@@ -1,58 +1,53 @@
+body {
+    font-size: 8pt;
+}
+
+@page  {
+    margin-top: 0.25cm;
+    margin-bottom: 0.25cm;
+    margin-left: 0.25cm;
+    margin-right: 0.25cm;
+}
+
 .paper--a4 {
     max-width: 21cm;
     max-height: 29cm;
     overflow: hidden;
 }
 
-@page  {
-    margin-bottom: 1cm;
-    margin-left: 1cm;
-    margin-right: 1cm;
-}
-
 .ticket {
-    display: block;
-    flex-wrap: wrap;
-}
-
-.ticket__information {
-    flex: 1 0 auto;
-    margin-right: 8px;
-    width: 30%;
-    float: left;
+    margin-bottom: 0.5rem;
 }
 
 .ticket__information h2 {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.25rem;
 }
 
-.ticket__card {
-    flex-basis: 63%;
+.ticket__customer li,
+.ticket__data li {
+    margin-bottom: 0.1rem;
 }
 
 .ticket__data {
-    font-size: 14pt;
+    font-size: 12pt;
 }
 
 .ticket__meeting-point {
-    max-width: 42%;
+    max-width: 100%;
 }
 
 .ticket__tips2 {
     list-style: disc;
-    margin-left: 1em;
+    margin-left: 1rem;
 }
 
 .ticket__tips li {
     text-align: justify;
 }
 
-.footer__socialmedia {
-    display: block;
-}
-
 .footer__socialmedia li {
-    margin-right: 2em;
+    margin-right: 2rem;
+    float: left;
 }
 
 .uppercase {
